# healthcare-ai-governance

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  PRACTITIONERS.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
data/: audit_config.yaml  jailbreak_patterns.yaml  mitigations.yaml  questionnaire.yaml  sample_audit_outputs.jsonl
docs/: primer.md
docs/decisions/: 001-leader-facing-framing.md  002-yaml-inventory-registry.md  003-streamlit-for-dashboard.md  004-weasyprint-for-pdfs.md  005-presidio-and-its-limits.md  006-content-hash-signing.md
docs/images/: README.md
docs/mappings/: fda-samd-mapping.md  nist-ai-rmf-mapping.md  onc-hti1-mapping.md
docs/templates/: ai-incident-response.md  ai-procurement-checklist.md  ai-use-case-intake.md  vendor-model-card-request.md
inventory/: README.md  organization.yaml
inventory/systems/: cdi-assistant.yaml  guideline-gpt.yaml  radiology-triage.yaml  readmission-risk.yaml  scheduling-optimizer.yaml  sepsis-ews.yaml
scripts/: capture_screenshots.py  generate_fairness_demo.py  regenerate_demo_artifacts.py  seed_demo_data.py
src/healthcare_ai_governance/: __init__.py  cli.py  config.py  dashboard_support.py  types.py
src/healthcare_ai_governance/board_report/: __init__.py  generator.py
src/healthcare_ai_governance/fairness/: __init__.py  metrics.py  reporter.py  schema.py  slicer.py
src/healthcare_ai_governance/inventory/: __init__.py  cli.py  queries.py  registry.py  schema.py
src/healthcare_ai_governance/model_card/: __init__.py  cli.py  generator.py  schema.py
src/healthcare_ai_governance/output_auditor/: __init__.py  auditor.py  cli.py  reporter.py  schema.py
src/healthcare_ai_governance/risk_assessment/: __init__.py  cli.py  (+5 more)
tests/: conftest.py  test_board_report.py  test_config.py  test_dashboard_render.py  test_dashboard_support.py  test_fairness_metrics.py  test_fairness_slicer.py  test_inventory_cli.py  test_inventory_queries.py  test_inventory_registry.py  test_llm_client.py  test_model_card_cli.py  test_model_card_generator.py  test_output_auditor.py  test_output_auditor_citation.py  test_output_auditor_claims.py  test_output_auditor_phi.py  test_pdf.py  test_risk_assessment_cli.py  test_risk_assessment_components.py  test_risk_assessment_scoring.py  test_signing.py  test_ui_imports.py
tests/fixtures/: model_card_readmission.md
(+26 files in other folders)
